K8S/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awtl-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awtl-backend
  template:
    metadata:
      labels:
        app: awtl-backend
    spec:
      containers:
      - name: awtl-backend
        image: s341833/awtl-backend:latest
        ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: awtl-backend-clusterip
spec:
  type: ClusterIP
  selector:
    app: awtl-backend
  ports:
    - name: awtl-backend
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: awtl-backend-np-srv
spec:
  type: NodePort
  selector:
    app: awtl-backend
  ports:
    - name: awtl-backend
      protocol: TCP
      port: 80
      targetPort: 8080
