K8S/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awtl-keycloak-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awtl-keycloak
  template:
    metadata:
      labels:
        app: awtl-keycloak
    spec:
      containers:
      - name: awtl-keycloak
        image: s341833/awtl-keycloak:latest
        #args: ["-Djboss.http.port=80"]
        ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: awtl-keycloak-clusterip
spec:
  type: ClusterIP
  selector:
    app: awtl-keycloak
  ports:
    - name: awtl-keycloak
      protocol: TCP
      port: 80
      targetPort: 8080
