K8S/admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awtl-admin-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awtl-admin-frontend
  template:
    metadata:
      labels:
        app: awtl-admin-frontend
    spec:
      containers:
      - name: awtl-admin-frontend
        image: s341833/awtl-admin-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: awtl-admin-frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: awtl-admin-frontend
  ports:
    - name: awtl-admin-frontend
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awtl-admin-ingress
spec:
  rules:
  - host: "awtl.met.no"
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: awtl-admin-frontend-clusterip
            port:
              number: 80
