K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awlt-ingress
spec:
  rules:
  - host: "k8s.local"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: awtl-backend-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: awtl-frontend-clusterip
            port:
              number: 80
  - host: "vm.k8s.local"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: awtl-backend-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: awtl-frontend-clusterip
            port:
              number: 80
  - host: "awtl.met.no"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: awtl-backend-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: awtl-frontend-clusterip
            port:
              number: 80
  - host: "awtl-dev.met.no"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: awtl-backend-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: awtl-frontend-clusterip
            port:
              number: 80
